Define HAVE_STRUCT_DIRENT_D_NAMLEN in config,h, and test it when deciding whether to use entry->d_namlen or strlen(entry->d_name). Addresses PR 40477 by Robert Millan.